# sysinfop

./: .gitignore  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml
src/sysinfop/: console.py  render.py  sysinfo.py
system/: system.go
